# leo-feedback-mcp

./: .bumpversion.cfg  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.cursor/: mcp.json
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/screens/: about_screen.dart  session_list_screen.dart  sessions_screen.dart  settings_screen.dart  workspace_screen.dart
frontend/lib/services/: api_service.dart  auto_submit_service.dart  notification_service.dart  session_history_service.dart  websocket_service.dart
frontend/lib/theme/: app_theme.dart
frontend/lib/widgets/: ai_summary_panel.dart  app_action_button.dart  feedback_panel.dart  header_bar.dart  markdown_content.dart  resizable_split_view.dart
frontend/web/: index.html  manifest.json
scripts/: build.sh  init.sh  upload.sh
src/mcp_feedback_enhanced/: __init__.py  __main__.py  debug.py  i18n.py  server.py
src/mcp_feedback_enhanced/utils/: __init__.py  error_handler.py  memory_monitor.py  resource_manager.py
src/mcp_feedback_enhanced/web/: __init__.py  main.py
src/mcp_feedback_enhanced/web/constants/: __init__.py  message_codes.py
src/mcp_feedback_enhanced/web/locales/en/: translation.json
src/mcp_feedback_enhanced/web/models/: __init__.py  feedback_result.py  feedback_session.py
src/mcp_feedback_enhanced/web/routes/: __init__.py  main_routes.py
src/mcp_feedback_enhanced/web/static/: index.html
src/mcp_feedback_enhanced/web/static/css/: styles.css
src/mcp_feedback_enhanced/web/static/js/: app.js
src/mcp_feedback_enhanced/web/static/js/modules/: ui-manager.js
src/mcp_feedback_enhanced/web/static/js/modules/utils/: time-utils.js
src/mcp_feedback_enhanced/web/templates/: feedback.html
src/mcp_feedback_enhanced/web/utils/: __init__.py  browser.py  compression_config.py  compression_monitor.py  network.py  port_manager.py  session_cleanup_manager.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/helpers/: __init__.py  mcp_client.py
tests/integration/: __init__.py
tests/unit/: __init__.py
