[project]
name = "leo-feedback-mcp"
version = "1.0.7"
description = "Interactive MCP feedback server with Flutter Web UI for AI-assisted development. Collect user feedback, images, and manage sessions in real-time."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Leo Nguyen" }
]
keywords = ["mcp", "ai", "feedback", "web-ui", "flutter", "interactive", "development", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Desktop Environment",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
]
dependencies = [
    "fastmcp>=2.0.0",
    "psutil>=7.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "mcp>=1.9.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
leo-feedback-mcp = "mcp_feedback_enhanced.__main__:main"
mcp-feedback-enhanced = "mcp_feedback_enhanced.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_feedback_enhanced"]

[tool.hatch.build.targets.wheel.force-include]
"frontend/build/web" = "mcp_feedback_enhanced/flutter_web"

[tool.hatch.build.targets.sdist.force-include]
"frontend/build/web" = "frontend/build/web"

[tool.uv]
dev-dependencies = [
    "bump2version>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "twine>=6.1.0",
    "ruff>=0.11.0",
    "mypy>=1.16.0",
    "pre-commit>=4.0.0",
    "pillow>=11.2.1",
]

# ===== Ruff =====
[tool.ruff]
target-version = "py311"
line-length = 88
include = ["*.py", "*.pyi", "**/pyproject.toml"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",

    "venv",
    "*.egg-info",
    ".trunk",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "C90",    # mccabe
    "T20",    # flake8-print
    "TID",    # flake8-tidy-imports
    "ICN",    # flake8-import-conventions
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "S",      # bandit
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

ignore = [
    # Formatting conflicts
    "E501",
    "COM812",
    "COM819",

    # Tests and debug
    "S101",
    "T201",

    # Import style
    "PLC0415",

    # Security (handled)
    "S603",
    "S607",
    "S108",

    # Full-width chars (legacy)
    "RUF001",
    "RUF002",
    "RUF003",

    # Complexity
    "PLR0913",
    "PLR0912",
    "PLR0911",
    "PLR0915",
    "PLR2004",
    "C901",

    # TODO refactor
    "E402",
    "E722",
    "ARG001",
    "ARG002",
    "SIM105",
    "RUF006",

    # Architecture
    "TID252",
    "B007",
    "SIM102",
    "SIM103",
    "SIM108",
    "SIM110",
    "SIM117",
    "RET504",
    "RUF005",
    "RUF012",
    "RUF013",
    "S110",
    "E712",
    "PLW0603",
    "A002",
]

mccabe.max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ARG",
    "FBT",
    "PLR2004",
    "S311",
]

"__init__.py" = [
    "F401",
]

"scripts/**/*.py" = [
    "T201",
    "S602",
    "S603",
    "S607",
]

"src/mcp_feedback_enhanced/web/**/*.py" = [
    "S104",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["mcp_feedback_enhanced"]
force-single-line = false
lines-after-imports = 2

# ===== mypy =====
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false

strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

show_error_codes = true
show_column_numbers = true
pretty = true

files = ["src", "tests"]
exclude = [
    "build/",
    "dist/",
    ".venv/",
    "venv/",
    ".trunk/",

    ".mypy_cache/",
]

explicit_package_bases = true
mypy_path = ["src"]
no_site_packages = true

[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
    "mcp.*",
    "psutil.*",
    "uvicorn.*",
    "websockets.*",
    "fastapi.*",
    "pydantic.*",
    "pytest.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
